--- a/InvestingApp/Views/Account/Index.cshtml
+++ b/InvestingApp/Views/Account/Index.cshtml
@@ -110,25 +110,23 @@
 
         var data = new google.visualization.DataTable();
         data.addColumn('string', 'Month');
-        data.addColumn('number', 'Profit, RUB');
         data.addColumn('number', 'Profit, %');
+        data.addColumn({ type: 'string', role: 'tooltip', 'p': { 'html': true } });
 
         for (i = 0; i < xs.length; i++) {
-            data.addRow([xs[i].toString(), y1s[i], y2s[i]]);
+            data.addRow([xs[i].toString(), y2s[i], getProfitsToolTip(xs[i], y1s[i], y2s[i])]);
         }
         var options = {
+            tooltip: { isHtml: true },
             title: 'Profits per month',
             legend: { position: 'bottom' },
-            vAxes: {0: {
-                format:'# RUB'
-            },
-                1: {
+            vAxes: {
+                0: {
                     gridlines: {color: 'transparent'},
                     format:'# \'%\''
                 },
             },
-            series: {0: {targetAxisIndex:0},
-                1:{targetAxisIndex:1},
+            series: {0: {targetAxisIndex:0}
             },
         };
 
