Grid lines fix.

--- a/InvestingApp/Views/Home/Index.cshtml
+++ b/InvestingApp/Views/Home/Index.cshtml
@@ -90,7 +90,7 @@
             legend: { position: 'bottom' },
             vAxes: {
                 0: {
-                    gridlines: {color: 'transparent'},
+                    // gridlines: {color: 'transparent'},
                     format:'# \'%\''
                 },
             },
