--- a/InvestingApp/Views/Account/Index.cshtml
+++ b/InvestingApp/Views/Account/Index.cshtml
@@ -122,7 +122,7 @@
             legend: { position: 'bottom' },
             vAxes: {
                 0: {
-                    gridlines: {color: 'transparent'},
+                    // gridlines: {color: 'transparent'},
                     format:'# \'%\''
                 },
             },
